app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cit270vanceservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cit270vanceservice
  template:
    metadata:
      name: cit270vanceservice
      labels:
        app: cit270vanceservice
    spec:
      containers:
      - name: cit270vanceservice
        image: gcr.io/cit-270-kubernetes/vance-api
        volumeMounts:
        - name: ssl
          mountPath: "/etc/letsencrypt/live/vancenykreim.cit270.com/"
        command: ["npm"]
        args: ["run", "start"]
        resources:
          requests:
            cpu: 0.125
            memory: 500Mi
          limits:
            cpu: 0.125
            memory: 600Mi
        imagePullPolicy: Always
      volumes:
      - name: ssl
        secret:
          secretName: vancecerts
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: cit270vanceservice-loadbalancer
# spec:
#   selector:
#     app: cit270vanceservice
#   type: LoadBalancer
#   ports:
#   - port: 443
#     targetPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: stedi-vancenykreim-nodeport
spec:
  selector:
    app: cit270vanceservice
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stedi-vancenykreim-ingress
  annotations:
  # use this command to find the address name: gcloud compute addresses list
    kubernetes.io/ingress.global-static-ip-name: cit270vance
  # needs to match the name of the ManagedCertificate (line 75)
    networking.gke.io/managed-certificates: stedi-vancenykreim-certificate
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
          # needs to match the name of the NodePort Service (line 63)
            name: stedi-vancenykreim-nodeport
            port:
              number: 80
